# Project-Ether

./: Makefile  README.md  export.sh
examples/: Cargo.toml  Makefile
examples/libs/: Makefile
examples/libs/etherc_src/: simple_add  simple_find_max  simple_find_min  simple_multiply  simple_sub
examples/src/: etherc_types.rs  simple_add.rs  simple_find_max.rs  simple_find_min.rs  simple_multiply.rs  simple_sub.rs
src/: compiler.cpp  etherc.cpp  lexer.cpp  main.cpp
tests/: a.out  mul.cpp  test
